2003-04-17  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: fix the aspell/pspell check. It should fix bug #105563: 
	gEdit (2.2.0.1) fail to compile with new Aspell/Pspell 0.50.3

2003-04-16  Paolo Maggi  <paolo.maggi@polito.it>

	* autogen.sh: updated

2003-04-14  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* Makefile.am:
	* configure.in:
	* data/GNOME_Gedit.server.in:

	Added new viewer control for nautilus with syntax highlighting thanks
	to gtksourceview. Gedit now depends on gtksourceview 
	(toward-gedit-integration branch). This viewer will eventually replace
	the standard text viewer in nautilus.

2003-04-14  Mike Lei <mike.lei@sun.com>

	* configure.in: Added Makefile support for de es fr it sv
	  ja ko zh_CN zh_TW
	* help files for above languages

2003-03-26  James Willcox  <jwillcox@gnome.org>

	* NEWS:  Updated

2003-03-13  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-03-07  Breda McColgan <Breda.McColgan@sun.com>

        * help/C/gedit.xml: updated for GNOME 2.2.1
        * help/C/l10n.txt: updated for GNOME 2.2.1
        * help/C/gedit-C.omf: updated manual date and version number
        * help/C/figures/gedit_window.png: updated screenshot
          of the latest application
        * help/C/figures/gedit_recent_files_menu_icon.png: new screenshot

2003-02-24  James Willcox  <jwillcox@gnome.org>

	* Makefile.am:
	* configure.in:  
	* data/Makefile.am:
	* data/gedit.pc.in:  Moved from toplevel
	* gedit/Makefile.am:

	Passes distcheck now.

2003-02-22  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-21  James Willcox  <jwillcox@gnome.org>

	* Makefile.am:
	* configure.in:
	* po/POTFILES.in:

	Clean up the build and enable buildling the plugins again.

2003-02-20  James Willcox  <jwillcox@gnome.org>

	* Makefile.am:
	* configure.in:
	* gedit-2.3.pc.in:
	* gedit/Makefile.am:
	* gedit/gedit-mdi-child.h:
	* gedit/gedit-mdi.h:
	* gedit/recent-files/Makefile.am: