@@ -80,18 +80,7 @@ dnl
 dnl GConf related settings
 dnl
 
-GCONF_CONFIG_SOURCE=
-
-AC_ARG_ENABLE(gconf-source, [  --enable-gconf-source=sourceaddress Where to install schema files.], GCONF_CONFIG_SOURCE=$enable_gconf_source,)
-
-if test "x$GCONF_CONFIG_SOURCE" = "x"; then
-	GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
-fi
-
-AC_SUBST(GCONF_CONFIG_SOURCE)
-
-AC_MSG_CHECKING("GConf configuration source")
-AC_MSG_RESULT(${GCONF_CONFIG_SOURCE})
+AM_GCONF_SOURCE_2
 
 dnl
 dnl Check popt
