@@ -8,7 +8,7 @@ keys_in_files 	= gedit.keys.in
 keys_DATA 	= $(keys_in_files:.keys.in=.keys) 
 @INTLTOOL_KEYS_RULE@
 
-schemasdir	 = $(sysconfdir)/gconf/schemas
+schemasdir	 = $(GCONF_SCHEMA_FILE_DIR)
 schemas_in_files = gedit.schemas.in
 schemas_DATA 	 = $(schemas_in_files:.schemas.in=.schemas)
 @INTLTOOL_SCHEMAS_RULE@
@@ -41,10 +41,14 @@ EXTRA_DIST = $(desktop_in_files)	\
 	$(app_DATA)			\
 	gedit.pc.in
 	
+if GCONF_SCHEMAS_INSTALL
 install-data-local:
 	        if test -z "$(DESTDIR)" ; then \
 	                for p in $(schemas_DATA) ; do \
-	                        GCONF_CONFIG_SOURCE=$(GCONF_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$$p ; \
+	                        GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$$p ; \
 	                done \
 	        fi
+else
+install-data-local:
+endif
 
