@@ -1,3 +1,9 @@
+2003-04-18  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* configure.in:
+	* Makefile.am: fixed bug #106129 - Package should use the 
+	AM_GCONF_SOURCE_2 macro (patch by Julio Merino <jmmv@hispabsd.org>)
+
 2003-04-17  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* configure.in: fix the aspell/pspell check. It should fix bug #105563: 
